--- a/landing.html
+++ b/landing.html
@@ -6,7 +6,7 @@
     <title>MYT - AI Bookkeeping </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link rel="stylesheet" href="./css/styles.css"> -->
+    <link rel="stylesheet" href="./css/styles.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -56,6 +56,110 @@
         <div class="content-right">
             <img src="./images/landing1.png" alt="Image">
         </div>
+    </section>
+
+    <section>
+        <div class="review-box">
+            <div class="review-content">
+                <div class="user-info">
+                    <div class="user-photo">
+                        <img src="./assets/img/testimonials/round.jfif" alt="User Photo" class="photo">
+                    </div>
+                    <div class="user-details">
+                        <p class="user-name">Beth Russell</p>
+                        <p class="review-date">October 30, 2023</p>
+                    </div>
+                </div>
+                <div class="google-logo">
+                    <img src="./assets//img/testimonials/G.png" alt="Google Logo G" class="logo">
+                </div>
+            </div>
+            <div class="review-text">
+                <div class="star-rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <img src="./assets/img/testimonials/Vector.png" alt="" />
+                    <img src="./assets/img/testimonials/Vector.png" alt="" />
+                    <img src="./assets/img/testimonials/Vector.png" alt="" />
+                    <img src="./assets/img/testimonials/Vector.png" alt="" />
+                    <img src="./assets/img/testimonials/Vector.png" alt="" />
+                </div>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s.
+                </p>
+            </div>
+        </div>
+        <div class="review-box">
+            <div class="review-content">
+                <div class="user-info">
+                    <div class="user-photo">
+                        <img src="./assets/img/testimonials/round.jfif" alt="User Photo" class="photo">
+                    </div>
+                    <div class="user-details">
+                        <p class="user-name">Beth Russell</p>
+                        <p class="review-date">October 30, 2023</p>
+                    </div>
+                </div>
+                <div class="google-logo">
+                    <img src="./assets//img/testimonials/G.png" alt="Google Logo G" class="logo">
+                </div>
+            </div>
+            <div class="review-text">
+                <div class="star-rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <img src="./assets/img/testimonials/Vector.png" alt="" />
+                    <img src="./assets/img/testimonials/Vector.png" alt="" />
+                    <img src="./assets/img/testimonials/Vector.png" alt="" />
+                    <img src="./assets/img/testimonials/Vector.png" alt="" />
+                    <img src="./assets/img/testimonials/Vector.png" alt="" />
+                </div>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s.
+                </p>
+            </div>
+        </div>
+        <div class="review-box">
+            <div class="review-content">
+                <div class="user-info">
+                    <div class="user-photo">
+                        <img src="./assets/img/testimonials/round.jfif" alt="User Photo" class="photo">
+                    </div>
+                    <div class="user-details">
+                        <p class="user-name">Beth Russell</p>
+                        <p class="review-date">October 30, 2023</p>
+                    </div>
+                </div>
+                <div class="google-logo">
+                    <img src="./assets//img/testimonials/G.png" alt="Google Logo G" class="logo">
+                </div>
+            </div>
+            <div class="review-text">
+                <div class="star-rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <img src="./assets/img/testimonials/Vector.png" alt="" />
+                    <img src="./assets/img/testimonials/Vector.png" alt="" />
+                    <img src="./assets/img/testimonials/Vector.png" alt="" />
+                    <img src="./assets/img/testimonials/Vector.png" alt="" />
+                    <img src="./assets/img/testimonials/Vector.png" alt="" />
+                </div>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s.
+                </p>
+            </div>
+        </div>
+
+
     </section>
 
 </body>
