--- a/index.html
+++ b/index.html
@@ -381,10 +381,11 @@
 
         <div class="container black-section">
           <div class="black-textarea">
-          <div class="firstline">Why my T</div>
-          <div class="secondline">One and only for you <img src="/assets/img/64b11864635cb0e2d0e23473_new-svg-13 1.png" alt=""></div>
-          <div class="linethree">Lorem Ipsum is simply dummy text of the printing and typesetting has been 
-            the industrys standard dummy text ever since</div>
+            <div class="firstline">Why my T</div>
+            <div class="secondline">One and only for you <img
+                src="/assets/img/64b11864635cb0e2d0e23473_new-svg-13 1.png" alt=""></div>
+            <div class="linethree">Lorem Ipsum is simply dummy text of the printing and typesetting has been
+              the industrys standard dummy text ever since</div>
 
           </div>
           <div class="row black-row">
@@ -449,8 +450,10 @@
       <div class="container" style="margin-top: 50px;">
         <div class="row justify-content-center d-flex">
 
-          <h2 class="text-center " style="font-weight: 600; margin-top: 40px;"> Your All In one Accounting<br /> Solution with My T</h2>
-          <p class="text-center" style="padding-bottom: 20px;">Lorem Ipsum is simply dummy text of the printing and typesetting has been<br /> the
+          <h2 class="text-center " style="font-weight: 600; margin-top: 40px;"> Your All In one Accounting<br />
+            Solution with My T</h2>
+          <p class="text-center" style="padding-bottom: 20px;">Lorem Ipsum is simply dummy text of the printing and
+            typesetting has been<br /> the
             industrys standard
             dummy
             text ever since</p>
@@ -715,7 +718,7 @@
 
     <div class="row justify-content-center gy-4 d-flex" style="margin-top: 80px; margin-bottom: 100px;">
       <div class="d-flex justify-content-center google-section">
-    Bookkeeping loved by companies around the globe
+        Bookkeeping loved by companies around the globe
       </div>
       <div class="d-flex justify-content-center mt-0">
 
@@ -724,6 +727,112 @@
           dummy text ever since
         </p>
       </div>
+
+      <section>
+        <div class="review-box">
+          <div class="review-content">
+            <div class="user-info">
+              <div class="user-photo">
+                <img src="./assets/img/testimonials/round.jfif" alt="User Photo" class="photo">
+              </div>
+              <div class="user-details">
+                <p class="user-name">Beth Russell</p>
+                <p class="review-date">October 30, 2023</p>
+              </div>
+            </div>
+            <div class="google-logo">
+              <img src="./assets//img/testimonials/G.png" alt="Google Logo G" class="logo">
+            </div>
+          </div>
+          <div class="review-text">
+            <div class="star-rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <img src="./assets/img/testimonials/Vector.png" alt="" />
+              <img src="./assets/img/testimonials/Vector.png" alt="" />
+              <img src="./assets/img/testimonials/Vector.png" alt="" />
+              <img src="./assets/img/testimonials/Vector.png" alt="" />
+              <img src="./assets/img/testimonials/Vector.png" alt="" />
+            </div>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+              industry's standard dummy text ever since the 1500s.
+            </p>
+          </div>
+        </div>
+        <div class="review-box">
+          <div class="review-content">
+            <div class="user-info">
+              <div class="user-photo">
+                <img src="./assets/img/testimonials/round.jfif" alt="User Photo" class="photo">
+              </div>
+              <div class="user-details">
+                <p class="user-name">Beth Russell</p>
+                <p class="review-date">October 30, 2023</p>
+              </div>
+            </div>
+            <div class="google-logo">
+              <img src="./assets//img/testimonials/G.png" alt="Google Logo G" class="logo">
+            </div>
+          </div>
+          <div class="review-text">
+            <div class="star-rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <img src="./assets/img/testimonials/Vector.png" alt="" />
+              <img src="./assets/img/testimonials/Vector.png" alt="" />
+              <img src="./assets/img/testimonials/Vector.png" alt="" />
+              <img src="./assets/img/testimonials/Vector.png" alt="" />
+              <img src="./assets/img/testimonials/Vector.png" alt="" />
+            </div>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+              industry's standard dummy text ever since the 1500s.
+            </p>
+          </div>
+        </div>
+        <div class="review-box">
+          <div class="review-content">
+            <div class="user-info">
+              <div class="user-photo">
+                <img src="./assets/img/testimonials/round.jfif" alt="User Photo" class="photo">
+              </div>
+              <div class="user-details">
+                <p class="user-name">Beth Russell</p>
+                <p class="review-date">October 30, 2023</p>
+              </div>
+            </div>
+            <div class="google-logo">
+              <img src="./assets//img/testimonials/G.png" alt="Google Logo G" class="logo">
+            </div>
+          </div>
+          <div class="review-text">
+            <div class="star-rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <img src="./assets/img/testimonials/Vector.png" alt="" />
+              <img src="./assets/img/testimonials/Vector.png" alt="" />
+              <img src="./assets/img/testimonials/Vector.png" alt="" />
+              <img src="./assets/img/testimonials/Vector.png" alt="" />
+              <img src="./assets/img/testimonials/Vector.png" alt="" />
+            </div>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+              industry's standard dummy text ever since the 1500s.
+            </p>
+          </div>
+        </div>
+
+
+      </section>
+
+      <!--     
       <div class="row d-flex justify-content-center">
         <div class="col-sm-2">
           <div class="card">
@@ -749,7 +858,13 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
+
+
+
+
+
+      <!-- ================================== -->
       <!-- <div class="col-lg-6 d-flex flex-column justify-content-center order-2 order-lg-1" data-aos="fade-up"
         data-aos-delay="100">
         <h3>Enim quis est voluptatibus aliquid consequatur</h3>
